gl33-master/src/test/deca/context/invalid/other/operations_float_boolean.deca
// Invalid
// Opérations sur les flottants et les boolean ensemble

{
    float x;
    float y;
    boolean a;

    x = y + a;
}
